--- a/sections/modular-richtext.liquid
+++ b/sections/modular-richtext.liquid
@@ -76,14 +76,18 @@
         {% case block.type %}
           {% when 'heading' %}
             {%- if block.settings.heading != blank -%}
-              <h2 class="modular-richtext__heading h1" {{ block.shopify_attributes }}>
-                {{ block.settings.heading | escape }}
-              </h2>
+              <div {{ block.shopify_attributes }}>
+                <h2 class="modular-richtext__heading h1">
+                  {{ block.settings.heading | escape }}
+                </h2>
+              </div>
             {%- endif -%}
           {% when 'text' %}
             {%- if block.settings.text != blank -%}
-              <div class="modular-richtext__text rte" {{ block.shopify_attributes }}>
-                {{ block.settings.text }}
+              <div {{ block.shopify_attributes }}>
+                <div class="modular-richtext__text rte">
+                  {{ block.settings.text }}
+                </div>
               </div>
             {%- endif -%}
           {% when 'buttons' %}
