general updates to all new sections

--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -89,7 +89,7 @@
   }
   
   .faq__answer {
-    color: {{ section.settings.answer_color }};
+    color: {{ section.settings.text_color }};
     padding: 0 66px 40px 66px;
     width: 85%;
     max-width: 588px;
@@ -185,12 +185,6 @@
       "id": "question_color", 
       "label": "Question color",
       "default": "#9E5048"
-    },
-    {
-      "type": "color",
-      "id": "answer_color",
-      "label": "Answer color",
-      "default": "#42302C"
     },
     {
       "type": "color",
