--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -4,7 +4,6 @@
 
 <style>
   .faq {
-    padding: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px 0 {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
     color: {{ section.settings.text_color }};
     width: 100%;
     max-width: 1440px;
@@ -12,9 +11,15 @@
     background-color: {{ section.settings.background_color }};
   }
   
+  .section-{{ section.id }}-padding {
+    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+  }
+  
   @media screen and (min-width: 750px) {
-    .faq {
-      padding: {{ section.settings.padding_top }}px 0 {{ section.settings.padding_bottom }}px;
+    .section-{{ section.id }}-padding {
+      padding-top: {{ section.settings.padding_top }}px;
+      padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
   
@@ -102,7 +107,7 @@
   }
 </style>
 
-<div class="faq" id="Faq-{{ section.id }}" {{ section.shopify_attributes }}>
+<div class="faq section-{{ section.id }}-padding" id="Faq-{{ section.id }}" {{ section.shopify_attributes }}>
   {% if section.settings.title != blank %}
     <h2 class="faq__title">{{ section.settings.title }}</h2>
   {% endif %}
