--- a/sections/modular-richtext.liquid
+++ b/sections/modular-richtext.liquid
@@ -3,12 +3,15 @@
 <style>
   .modular-richtext {
     background-color: {{ section.settings.background_color }};
+  }
+
+  .section-{{ section.id }}-padding {
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
     padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
   }
 
   @media screen and (min-width: 750px) {
-    .modular-richtext {
+    .section-{{ section.id }}-padding {
       padding-top: {{ section.settings.padding_top }}px;
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
@@ -74,7 +77,7 @@
   }
 </style>
 
-<div class="modular-richtext" {{ section.shopify_attributes }}>
+<div class="modular-richtext section-{{ section.id }}-padding" {{ section.shopify_attributes }}>
   <div class="page-width">
     <div class="modular-richtext__wrapper{% if section.settings.text_alignment == 'center' %} modular-richtext__wrapper--center{% endif %}">
       {%- for block in section.blocks -%}
