--- a/sections/service-blocks.liquid
+++ b/sections/service-blocks.liquid
@@ -6,9 +6,15 @@
   background-color: {{ section.settings.background_color }};
 }
 
+.section-{{ section.id }}-padding {
+  padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+  padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+}
+
 @media screen and (min-width: 750px) {
-  .service-blocks {
-    padding: {{ section.settings.padding_top }}px 0 {{ section.settings.padding_bottom }}px;
+  .section-{{ section.id }}-padding {
+    padding-top: {{ section.settings.padding_top }}px;
+    padding-bottom: {{ section.settings.padding_bottom }}px;
   }
 }
 
@@ -55,7 +61,7 @@
   height: auto;
   object-fit: cover;
   position: relative;
-  top: -80px;
+  top: 0;
 }
 
 .service-block__text-container {
@@ -135,7 +141,7 @@
 }
 </style>
 
-<div class="service-blocks {% if section.settings.full_width == false %}page-width{% endif %}" {{ section.shopify_attributes }}>
+<div class="service-blocks section-{{ section.id }}-padding {% if section.settings.full_width == false %}page-width{% endif %}" {{ section.shopify_attributes }}>
   <div class="service-blocks__container">
     {% for block in section.blocks %}
       {% if forloop.index <= 2 %}
@@ -171,7 +177,7 @@
                   {% endif %}
                   
                   {% if block.settings.duration != blank or block.settings.price != blank %}
-                    <div class="service-block__meta" style="color: {{ section.settings.title_color }};">
+                    <div class="service-block__meta" style="color: {{ section.settings.meta_color }};">
                       {% if block.settings.duration != blank %}{{ block.settings.duration }}{% endif %}
                       {% if block.settings.duration != blank and block.settings.price != blank %} | {% endif %}
                       {% if block.settings.price != blank %}{{ block.settings.price }}{% endif %}
@@ -234,6 +240,12 @@
       "id": "title_color",
       "label": "Title color",
       "default": "#9e503c"
+    },
+    {
+      "type": "color",
+      "id": "meta_color",
+      "label": "Duration/price color",
+      "default": "#e0d4c8"
     },
     {
       "type": "color",
