--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -2,12 +2,18 @@
 
 <style>
 .testimonials-section {
-  padding: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px 0 {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+  padding: 0;
+}
+
+.section-{{ section.id }}-padding {
+  padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+  padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
 }
 
 @media screen and (min-width: 750px) {
-  .testimonials-section {
-    padding: {{ section.settings.padding_top }}px 0 {{ section.settings.padding_bottom }}px;
+  .section-{{ section.id }}-padding {
+    padding-top: {{ section.settings.padding_top }}px;
+    padding-bottom: {{ section.settings.padding_bottom }}px;
   }
 }
 
@@ -140,10 +146,6 @@
 }
 
 @media screen and (max-width: 749px) {
-  .testimonials-section {
-    padding: 4rem 0;
-  }
-
   .testimonial-highlight {
     font-size: 2rem;
   }
@@ -163,7 +165,7 @@
 }
 </style>
 
-<div class="testimonials-section" id="Testimonials-{{ section.id }}" style="background-color: {{ section.settings.background_color }}; color: {{ section.settings.text_color }};" {{ section.shopify_attributes }}>
+<div class="testimonials-section section-{{ section.id }}-padding" id="Testimonials-{{ section.id }}" style="background-color: {{ section.settings.background_color }}; color: {{ section.settings.text_color }};" {{ section.shopify_attributes }}>
   <div class="page-width">
     <div class="testimonials-container">
       <div class="testimonials-header">
@@ -201,13 +203,13 @@
       <div class="testimonials-navigation">
         <button class="testimonial-button testimonial-button--prev" style="border-color: {{ section.settings.button_color }}; color: {{ section.settings.button_color }};" aria-label="Previous testimonial">
           <span class="visually-hidden">Previous testimonial</span>
-          {% render 'testimonial-arrow' %}
-        </button>
-        <button class="testimonial-button testimonial-button--next" style="border-color: {{ section.settings.button_color }}; color: {{ section.settings.button_color }};" aria-label="Next testimonial">
-          <span class="visually-hidden">Next testimonial</span>
           <div style="transform: rotate(180deg);">
             {% render 'testimonial-arrow' %}
           </div>
+        </button>
+        <button class="testimonial-button testimonial-button--next" style="border-color: {{ section.settings.button_color }}; color: {{ section.settings.button_color }};" aria-label="Next testimonial">
+          <span class="visually-hidden">Next testimonial</span>
+          {% render 'testimonial-arrow' %}
         </button>
       </div>
     </div>
